--- a/Giros/Views/Login.xaml
+++ b/Giros/Views/Login.xaml
@@ -14,16 +14,20 @@
         WindowStyle="None"
         xmlns:local="clr-namespace:Giros"
         mc:Ignorable="d"
-        Title="Login" Height="350" Width="430">
+        Title="Login" Height="350" Width="430"
+        WindowStartupLocation="CenterScreen"
+        >
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        
+        
 
         <Button Content="{DynamicResource Login}" Click="Button_Click" Margin="44,191,64,101" Height="50" HorizontalAlignment="Center" Width="103"/>
-        <TextBox x:Name="username" HorizontalAlignment="Center" Height="24" Margin="44,76,47,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <PasswordBox x:Name="password" HorizontalAlignment="Center" Height="22" Margin="44,132,47,0" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="usernameBox" HorizontalAlignment="Center" Height="24" Margin="44,76,47,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <PasswordBox x:Name="passwordBox" HorizontalAlignment="Center" Height="22" Margin="44,132,47,0" VerticalAlignment="Top" Width="120"/>
 
 
 
@@ -31,9 +35,14 @@
 
         <materialDesign:PackIcon Kind="Key" Margin="10,138,0,0"/>
 
-        <materialDesign:PackIcon Kind="Planet" Margin="10,10,0,0" />
+        <materialDesign:PackIcon Kind="Planet" Margin="10,10,0,0" MouseLeftButtonDown="planetClicked"/>
+
 
         <materialDesign:PackIcon Kind="Brush" Margin="44,10,0,0"/>
+        <ComboBox Name="languagesComboBox" Margin="15,10,185,307" Visibility="Hidden" SelectionChanged="ChangeLaguage">
+            <ComboBoxItem  Name="Serbian" IsSelected="True" Content="{DynamicResource Serbian}"></ComboBoxItem>
+            <ComboBoxItem Name="English" Content="{DynamicResource English}"></ComboBoxItem>
+        </ComboBox>
 
         <Image Source="/Resources/Images/GirosLogin.jpg" Grid.Column="1" Stretch="Fill" Margin="0,-12,-38,-10"/>
 
