--- a/Giros/Views/Dashboard.xaml
+++ b/Giros/Views/Dashboard.xaml
@@ -45,7 +45,7 @@
 
         
 
-        <materialDesign:PackIcon Kind="Brush" Margin="74,10,0,0"/>
+        <materialDesign:PackIcon Kind="Brush" Margin="74,10,0,0" MouseLeftButtonDown="BrushClicked"/>
 
         <materialDesign:PackIcon Kind="Logout"  Margin="116,10,0,0" MouseLeftButtonDown="LogOut"/>
 
@@ -53,6 +53,11 @@
         <ComboBox Name="languagesComboBox" Margin="31,10,94,93" Visibility="Hidden" SelectionChanged="ChangeLaguage">
             <ComboBoxItem  Name="Serbian" IsSelected="True" Content="{DynamicResource Serbian}"></ComboBoxItem>
             <ComboBoxItem Name="English" Content="{DynamicResource English}"></ComboBoxItem>
+        </ComboBox>
+        <ComboBox Name="themeComboBox" Margin="72,10,72,95" Visibility="Hidden" SelectionChanged="ChangeTheme" RenderTransformOrigin="0.588,0.435">
+            <ComboBoxItem  Name="Light" IsSelected="True" Content="{DynamicResource Light}"></ComboBoxItem>
+            <ComboBoxItem Name="Dark" Content="{DynamicResource Dark}"></ComboBoxItem>
+            <ComboBoxItem Name="DarkRed" Content="{DynamicResource DarkRed}"></ComboBoxItem>
         </ComboBox>
 
         <Label VerticalAlignment="Bottom" HorizontalAlignment="Center" Name="usernameLabel" Width="Auto" Height="Auto"/>
@@ -64,11 +69,11 @@
                 <Label  FontWeight="Bold" Foreground="White" Canvas.Left="16" Canvas.Top="18" Height="Auto" Width="131" FontSize="15">
                     <TextBlock TextWrapping="WrapWithOverflow" Text="{DynamicResource Summary}"></TextBlock>
                 </Label>
-                <Rectangle Fill="Green" Height="3" Width="137" Canvas.Left="10" Canvas.Top="47" RadiusX="10" RadiusY="10"></Rectangle>
+                <Rectangle Fill="{DynamicResource PrimaryHueDarkBrush}" Height="3" Width="137" Canvas.Left="10" Canvas.Top="47" RadiusX="10" RadiusY="10"></Rectangle>
                 <Label Name="racunLabel" Foreground="White" Height="Auto" Margin="16,0">
                     
                 </Label>
-                <Rectangle Fill="Green" Height="3" Width="137" Canvas.Left="10" Canvas.Top="47" RadiusX="10" RadiusY="10"></Rectangle>
+                <Rectangle Fill="{DynamicResource PrimaryHueDarkBrush}" Height="3" Width="137" Canvas.Left="10" Canvas.Top="47" RadiusX="10" RadiusY="10"></Rectangle>
                 <Label Name="cijenaLabel" Foreground="White" Height="Auto" Margin="16,0"/>
 
 
@@ -86,7 +91,7 @@
         
 
         <Canvas Grid.Row="2" Background="Gray">
-            <Button Content="{DynamicResource Finish}" Background="Green" BorderBrush="Green" Height="33" Width="81" Canvas.Left="37" Canvas.Top="10" Click="Button_Click_2"/>
+            <Button Content="{DynamicResource Finish}"  Height="33" Width="81" Canvas.Left="37" Canvas.Top="10" Click="Button_Click_2"/>
         </Canvas>
 
 
