--- a/Giros/Resources/StringResources.Srb.xaml
+++ b/Giros/Resources/StringResources.Srb.xaml
@@ -51,7 +51,7 @@
     <system:String x:Key="Works Since">Zaposlen/a od</system:String>
     <system:String x:Key="Phone">Telefon</system:String>
     <system:String x:Key="Paycheck">Plata</system:String>
-    <system:String x:Key="Total orders">Ukupno narudžbi</system:String>
+    <system:String x:Key="Total Orders">Ukupno narudžbi</system:String>
     <system:String x:Key="Light">Svijetla</system:String>
     <system:String x:Key="Dark">Tamna</system:String>
     <system:String x:Key="DarkRed">Crveno-Tamna</system:String>
