--- a/Giros/Views/Dashboard.xaml
+++ b/Giros/Views/Dashboard.xaml
@@ -11,7 +11,8 @@
         FontFamily="{DynamicResource MaterialDesignFont}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         WindowStartupLocation="CenterScreen"
-        Icon="/Resources/images/gyro.ico">
+        Icon="/Resources/images/gyro.ico"
+        ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
