--- a/Giros/Views/AdminPanel.xaml
+++ b/Giros/Views/AdminPanel.xaml
@@ -12,6 +12,8 @@
         FontFamily="{DynamicResource MaterialDesignFont}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         Icon="/Resources/images/gyro.ico"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
         >
     <Grid>
         <Grid.ColumnDefinitions>
@@ -107,8 +109,9 @@
 
                 </Label>
                 <Rectangle Fill="{DynamicResource PrimaryHueDarkBrush}"  Height="3" Width="137" Canvas.Left="10" Canvas.Top="47" RadiusX="10" RadiusY="10"></Rectangle>
-                
 
+                <Button Width="120" Content="{DynamicResource Edit}" Margin="0 10 0 0" Click="Edit_Staff" Visibility="Hidden" Name="editButton"></Button>
+                <Button Width="120" Content="{DynamicResource Delete}" Margin="0 10 0 0" Click="Delete_Staff" Visibility="Hidden" Name="deleteButton"></Button>
 
             </StackPanel>
         </ScrollViewer>
